# parkour-mcp

./: .gitignore  .mcpbignore  .vulture_whitelist.py  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  justfile  manifest.json  privacy-policy.md  pyproject.toml  pyrightconfig.json  renovate.json  server.json  server.py
.claude/: TECH_DEBT.md  docs-drift-enhancements.md
.claude/commands/: release.md
.claude/skills/drift/: SKILL.md
.github/workflows/: docs-drift.yml  release.yml
.semgrep/: content-fence-discipline.yml  fm-entries-construction.yml  ssrf-precedence.yml
changes/: README.md
claude_web_tools/: __init__.py  _pipeline.py  common.py  fetch_direct.py  fetch_js.py  kagi.py  markdown.py  mediawiki.py  semantic_scholar.py
docs/: developing.md  frontmatter-standard.md  guide.md  query-parameter-overload.md
kagi_research_mcp/: __init__.py  _pipeline.py  arxiv.py  common.py  doi.py  fetch_direct.py  fetch_js.py  github.py  kagi.py  markdown.py  mediawiki.py  packages.py  reddit.py  semantic_scholar.py  shelf.py
parkour_mcp/: __init__.py  __main__.py  _pipeline.py  arxiv.py  common.py  doi.py  fetch_direct.py  fetch_js.py  github.py  hermes_plugin.py  ietf.py  kagi.py  markdown.py  mediawiki.py  packages.py  scorecard.py  semantic_scholar.py  shelf.py  youtube.py
scripts/: benchmark_baselines.json  benchmark_pipeline.py  check_manifest_tools.py  cog_helpers.py  extract_changelog.py  generate_icons.py  regenerate_readme_examples.py  render_server_json.py  sync_versions.py  tools.toml
scripts/git-hooks/: pre-push
tests/: _output.py  conftest.py  test_arxiv.py  test_common.py  test_doi.py  test_fetch_direct.py  test_fetch_js.py  test_github.py  test_github_live.py  test_hermes_plugin.py  test_kagi.py  test_live.py  test_main.py  test_markdown.py  test_mediawiki.py  test_mediawiki_tool.py  test_packages.py  test_perf.py  test_reddit.py  test_scorecard.py  test_semantic_scholar.py  test_semgrep_rules.py  test_shelf.py  test_slicing.py  test_sync_versions.py  test_youtube.py
tests/fixtures/: malcolm_mcdowell_filmography.md
