[project]
name = "parkour-mcp"
version = "1.1.2"
description = "A content exploration toolkit that helps LLMs surface high signal, unsummarized web content."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
  { name = "blightbow" }
]
dependencies = [
    "mcp[cli]",
    "kagiapi",
    "beautifulsoup4",
    "httpx",
    "playwright",
    "markdownify",
    "semantic-text-splitter>=0.29.0",
    "tantivy>=0.25.1",
    "pyyaml>=6.0.3",
    "tree-sitter>=0.24",
    "htmd-py>=0.1.2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP",
]

[project.optional-dependencies]
grammars = [
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-c>=0.23",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-kotlin>=0.23",
    "tree-sitter-scala>=0.23",
]

[project.urls]
Homepage = "https://github.com/blightbow/parkour-mcp"
Repository = "https://github.com/blightbow/parkour-mcp"
Issues = "https://github.com/blightbow/parkour-mcp/issues"

[project.scripts]
parkour-mcp = "parkour_mcp:main"

[tool.setuptools.packages.find]
exclude = ["tmp*", "tests*", "scripts*"]

[tool.setuptools.package-data]
# Ship image assets inside the wheel so they resolve under site-packages
# when installed via `uv tool install parkour-mcp` (or `uvx parkour-mcp`).
# The mcpb bundle references the same package-local path via manifest.json,
# giving us one source of truth for both distribution channels.
parkour_mcp = [
    "assets/icon.png",
    "assets/icon.svg",
    "assets/icons/*.svg",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
# Opt-in collection: explicitly list the directories pytest should walk,
# rather than excluding exploratory/build dirs one at a time. pytest-ruff
# hooks `pytest_collect_file` and emits a ruff lint item for every `.py`
# file pytest walks during collection, so putting `parkour_mcp/` and
# `scripts/` in testpaths keeps them under ruff's watch alongside the
# test suite itself. Directories not listed here (`tmp/`, `bakeoff/`,
# `build/`, `.venv/`, `dist/`, etc.) are excluded by construction without
# depending on pytest's internal default `norecursedirs` list.
testpaths = ["parkour_mcp", "tests", "scripts"]
markers = [
    "live: live integration tests hitting real endpoints (deselected by default, run with -m live)",
    "perf: performance regression tests using captured fixtures (deselected by default, run with -m perf)",
]
addopts = "-m 'not live and not perf' --ruff"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ty.src]
# Vulture whitelist uses bare name references that don't resolve at parse
# time; vulture only parses the file, never imports it.
exclude = [".vulture_whitelist.py"]

[tool.ruff.lint.per-file-ignores]
# Vulture whitelist: bare name references are the format vulture requires
# to count a symbol as "used". Those references are undefined at parse
# time by design — ruff's F821 would otherwise flag every entry.
".vulture_whitelist.py" = ["F821"]

[dependency-groups]
dev = [
    "fonttools>=4.62",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-ruff>=0.5",
    "respx>=0.22.0",
    "tree-sitter-python>=0.23",
    "vulture>=2.16",
]
