[project]
name = "parkour-mcp"
version = "1.1.2"
description = "A content exploration toolkit that helps LLMs surface high signal, unsummarized web content."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
  { name = "blightbow" }
]
dependencies = [
    "mcp[cli]",
    "kagiapi",
    "beautifulsoup4",
    "httpx",
    "curl-cffi>=0.15.0",
    "playwright",
    "markdownify",
    "semantic-text-splitter>=0.29.0",
    "tantivy>=0.25.1",
    "pyyaml>=6.0.3",
    "tree-sitter>=0.24",
    "htmd-py>=0.1.2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP",
]

[project.optional-dependencies]
grammars = [
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-c>=0.23",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-kotlin>=0.23",
    "tree-sitter-scala>=0.23",
]

[project.urls]
Homepage = "https://github.com/blightbow/parkour-mcp"
Repository = "https://github.com/blightbow/parkour-mcp"
Issues = "https://github.com/blightbow/parkour-mcp/issues"

[project.scripts]
parkour-mcp = "parkour_mcp:main"

[tool.setuptools.packages.find]
exclude = ["tmp*", "tests*", "scripts*"]

[tool.setuptools.package-data]
# Ship image assets inside the wheel so they resolve under site-packages
# when installed via `uv tool install parkour-mcp` (or `uvx parkour-mcp`).
# The mcpb bundle references the same package-local path via manifest.json,
# giving us one source of truth for both distribution channels.
parkour_mcp = [
    "assets/icon.png",
    "assets/icon.svg",
    "assets/icons/*.svg",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
# Opt-in collection: explicitly list the directories pytest should walk,
# rather than excluding exploratory/build dirs one at a time. pytest-ruff
# hooks `pytest_collect_file` and emits a ruff lint item for every `.py`
# file pytest walks during collection, so putting `parkour_mcp/` and
# `scripts/` in testpaths keeps them under ruff's watch alongside the
# test suite itself. Directories not listed here (`tmp/`, `bakeoff/`,
# `build/`, `.venv/`, `dist/`, etc.) are excluded by construction without
# depending on pytest's internal default `norecursedirs` list.
testpaths = ["parkour_mcp", "tests", "scripts"]
markers = [
    "live: live integration tests hitting real endpoints (deselected by default, run with -m live)",
    "perf: performance regression tests using captured fixtures (deselected by default, run with -m perf)",
]
addopts = "-m 'not live and not perf' --ruff"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ty.src]
# Vulture whitelist uses bare name references that don't resolve at parse
# time; vulture only parses the file, never imports it.
exclude = [".vulture_whitelist.py"]

[tool.ruff.lint.per-file-ignores]
# Vulture whitelist: bare name references are the format vulture requires
# to count a symbol as "used". Those references are undefined at parse
# time by design — ruff's F821 would otherwise flag every entry.
".vulture_whitelist.py" = ["F821"]

[dependency-groups]
dev = [
    "commitizen>=4.10",
    "fonttools>=4.62",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-ruff>=0.5",
    "respx>=0.22.0",
    "semgrep>=1.159.0",
    "towncrier>=24.8",
    "tree-sitter-python>=0.23",
    "vulture>=2.16",
]

# ---------------------------------------------------------------------------
# Release tooling.
#
# towncrier owns CHANGELOG.md. Each user-facing change lands with a news
# fragment in changes/ (orphan naming, e.g. `+abc.feature.md`) so rebases
# don't conflict on issue-number filenames. At release time, `towncrier
# build` consumes the fragments and prepends a new `## [X.Y.Z]` section
# to CHANGELOG.md at the <!-- towncrier release notes start --> marker.
#
# commitizen owns version determination from Conventional Commits.
# `cz bump` reads `project.version` (pep621 provider), computes the next
# PEP 440 version (pep440 scheme, critical for PyPI compatibility on
# both finals and RCs), and writes it back. The release slash command
# chains: cz bump --version-files-only (stage pyproject bump)
# -> towncrier build (assemble CHANGELOG, consume fragments)
# -> sync_versions.py (mirror pyproject version into manifest.json
#    translated to strict SemVer, and server.json verbatim)
# -> git commit + just tag (test gate + annotated tag at HEAD).
# PyPI upload and GitHub Release creation stay in CI on tag push.
# ---------------------------------------------------------------------------

[tool.towncrier]
package = "parkour_mcp"
filename = "CHANGELOG.md"
directory = "changes"
start_string = "<!-- towncrier release notes start -->\n"
title_format = "## [{version}] {project_date}"
issue_format = "[#{issue}](https://github.com/blightbow/parkour-mcp/issues/{issue})"
underlines = ["", "", ""]
wrap = true
orphan_prefix = "+"

[[tool.towncrier.type]]
directory = "feature"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "removal"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous"
showcontent = true

[tool.commitizen]
name = "cz_conventional_commits"
# pep621 provider reads `project.version` from pyproject.toml (single
# source of truth). sync_versions.py fans the value out to manifest.json
# (PEP 440 -> strict SemVer for Claude Desktop) and server.json (verbatim).
version_provider = "pep621"
# pep440 scheme is the reason we chose commitizen over python-semantic-
# release: it emits PEP 440 versions (including correct RC form like
# `1.2.0rc1`) instead of SemVer-with-dashes that would break `uv build`.
version_scheme = "pep440"
tag_format = "v$version"
bump_message = "release: v$new_version"
# towncrier owns CHANGELOG.md. commitizen's own changelog generator
# would produce a conflicting format, so keep it off.
update_changelog_on_bump = false
major_version_zero = false
