[project]
name = "parkour-mcp"
version = "1.2.0"
description = "A content exploration toolkit that helps LLMs surface high signal, unsummarized web content."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
  { name = "blightbow" }
]
dependencies = [
    "mcp[cli]",
    "kagiapi",
    "beautifulsoup4",
    "httpx",
    "curl-cffi>=0.15.0",
    "playwright",
    "markdownify",
    "semantic-text-splitter>=0.29.0",
    "tantivy>=0.25.1",
    "pyyaml>=6.0.3",
    "tree-sitter>=0.24",
    "htmd-py>=0.1.2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP",
]

[project.optional-dependencies]
grammars = [
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-c>=0.23",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-kotlin>=0.23",
    "tree-sitter-scala>=0.23",
]

[project.urls]
Homepage = "https://github.com/blightbow/parkour-mcp"
Repository = "https://github.com/blightbow/parkour-mcp"
Issues = "https://github.com/blightbow/parkour-mcp/issues"

[project.scripts]
parkour-mcp = "parkour_mcp:main"

[tool.setuptools.packages.find]
exclude = ["tmp*", "tests*", "scripts*"]

[tool.setuptools.package-data]
# Ship image assets inside the wheel so they resolve under site-packages
# when installed via `uv tool install parkour-mcp` (or `uvx parkour-mcp`).
# The mcpb bundle references the same package-local path via manifest.json,
# giving us one source of truth for both distribution channels.
parkour_mcp = [
    "assets/icon.png",
    "assets/icon.svg",
    "assets/icons/*.svg",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
# Opt-in collection: explicitly list the directories pytest should walk,
# rather than excluding exploratory/build dirs one at a time. pytest-ruff
# hooks `pytest_collect_file` and emits a ruff lint item for every `.py`
# file pytest walks during collection, so putting `parkour_mcp/` and
# `scripts/` in testpaths keeps them under ruff's watch alongside the
# test suite itself. Directories not listed here (`tmp/`, `bakeoff/`,
# `build/`, `.venv/`, `dist/`, etc.) are excluded by construction without
# depending on pytest's internal default `norecursedirs` list.
testpaths = ["parkour_mcp", "tests", "scripts"]
markers = [
    "live: live integration tests hitting real endpoints (deselected by default, run with -m live)",
    "perf: performance regression tests using captured fixtures (deselected by default, run with -m perf)",
]
addopts = "-m 'not live and not perf' --ruff"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ty.src]
# Vulture whitelist uses bare name references that don't resolve at parse
# time; vulture only parses the file, never imports it.
exclude = [".vulture_whitelist.py"]

[tool.ruff.lint.per-file-ignores]
# Vulture whitelist: bare name references are the format vulture requires
# to count a symbol as "used". Those references are undefined at parse
# time by design — ruff's F821 would otherwise flag every entry.
".vulture_whitelist.py" = ["F821"]

[dependency-groups]
dev = [
    "cogapp>=3.6.0",
    "commitizen>=4.10",
    "fonttools>=4.62",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-ruff>=0.5",
    "respx>=0.22.0",
    "semgrep>=1.159.0",
    "tabulate>=0.9",
    "tree-sitter-python>=0.23",
    "vulture>=2.16",
]

# ---------------------------------------------------------------------------
# Release tooling.
#
# git-cliff owns CHANGELOG.md. It parses Conventional Commits from git
# history and extracts `Why:` trailers into user-facing narrative. No
# news fragments: commits carry their own release-note content via the
# `Why:` trailer discipline (see CLAUDE.md).
#
# commitizen owns version determination. `cz bump` reads
# `project.version` (pep621 provider), computes the next PEP 440 version
# (pep440 scheme; critical for PyPI compatibility on both finals and
# RCs), and writes it back. The release slash command chains:
#   cz bump --version-files-only (stage pyproject bump)
#   -> git cliff --tag v$NEW --unreleased --prepend CHANGELOG.md
#   -> sync_versions.py (mirror into manifest.json, server.json)
#   -> git commit + just tag (test gate + annotated tag at HEAD).
# PyPI upload and GitHub Release creation stay in CI on tag push.
# ---------------------------------------------------------------------------

[tool.git-cliff.changelog]
header = """
# Changelog

All notable changes to parkour-mcp will be documented in this file.

Format: https://keepachangelog.com/en/1.1.0/
Versioning: https://semver.org/spec/v2.0.0.html

"""
body = """
## [{% if version %}{{ version | trim_start_matches(pat="v") }}{% else %}unreleased{% endif %}]{% if timestamp %} {{ timestamp | date(format="%Y-%m-%d") }}{% endif %}
{% for group, commits in commits | group_by(attribute="group") %}
### {{ group | striptags | trim }}
{% for commit in commits -%}
{%- set why = commit.footers | filter(attribute="token", value="Why") | first -%}
{%- if why -%}
{%- set flat = why.value | replace(from="\n", to=" ") | replace(from="  ", to=" ") | replace(from="  ", to=" ") | trim -%}
- {{ flat }}
{% else -%}
- {{ commit.message | upper_first | trim }}
{% endif -%}
{% endfor %}
{% endfor %}
"""
trim = true

[tool.git-cliff.git]
# The HTML comment prefix on each `group` value is a documented workaround
# for git-cliff's default alphabetical group ordering (it does not honor
# the order commit_parsers are declared in). The `striptags | trim` filter
# in the body template strips the prefix before rendering. Without this,
# "Documentation" would appear above "Fixed" in every release.
commit_parsers = [
  { message = "^feat", group = "<!-- 0 -->Added" },
  { message = "^refactor", group = "<!-- 1 -->Changed" },
  { message = "^perf", group = "<!-- 1 -->Changed" },
  { message = "^fix", group = "<!-- 2 -->Fixed" },
  # Security scope convention: any commit with `(security)` scope routes
  # to the Security section regardless of type. This matters because
  # Conventional Commits has no `security` type; we need to piggyback on
  # existing types. Matches feat(security), fix(security), test(security),
  # chore(security). Anchored to the commit header (`^<type>(security)`)
  # so an incidental `(security)` mention in a commit body does not
  # falsely route the commit to the Security section.
  { message = "^[a-z]+\\(security\\)", group = "<!-- 3 -->Security" },
  { message = "^docs", group = "<!-- 4 -->Documentation" },
  { message = "^test", group = "<!-- 5 -->Miscellaneous" },
  { message = "^chore", skip = true },
  { message = "^build", skip = true },
  { message = "^ci", skip = true },
  { message = "^style", skip = true },
  { message = "^release", skip = true },
]
filter_commits = true

[tool.commitizen]
name = "cz_conventional_commits"
# pep621 provider reads `project.version` from pyproject.toml (single
# source of truth). sync_versions.py fans the value out to manifest.json
# (PEP 440 -> strict SemVer for Claude Desktop) and server.json (verbatim).
version_provider = "pep621"
# pep440 scheme is the reason we chose commitizen over python-semantic-
# release: it emits PEP 440 versions (including correct RC form like
# `1.2.0rc1`) instead of SemVer-with-dashes that would break `uv build`.
version_scheme = "pep440"
tag_format = "v$version"
bump_message = "release: v$new_version"
# towncrier owns CHANGELOG.md. commitizen's own changelog generator
# would produce a conflicting format, so keep it off.
update_changelog_on_bump = false
major_version_zero = false
